# peel

./: .gitignore  .gitlab-ci.yml  COPYING  README.md  api-tweaks.txt  meson.build  meson_options.txt  peel-dbus-gen.py  peel-gen.py
cmake/: meson.build  peel-config.cmake.in
docs/: book.toml
docs/src/: SUMMARY.md  array-ref.md  build-setup.md  cpp20-coroutines.md  custom-gobject-classes.md  defining-signals.md  destruction.md  errors-you-may-encounter.md  errors.md  float-ptr.md  gotchas-and-pitfalls.md  gtk-widget-templates.md  initialization.md  introduction.md  local-copies.md  meson-integration.md  naming-conventions.md  peel-gen.md  projects-built-with-peel.md  ref-ptr.md  signals.md  string.md  the-basics.md  unique-ptr-arr.md  unique-ptr.md  using-peel-with-cmake.md  using-peel-with-flatpak.md  using-peel-with-meson.md  value.md  weak-ptr.md
examples/: adwaita.cpp  bind-property.cpp  color-gradient.cpp  dialogs.cpp  file-browser.cpp  glycin.cpp  gtk-builder.cpp  hello-gst.cpp  hello-gtk.cpp  libdex.cpp  list-model.cpp  meson.build  properties-and-signals.cpp  rotation-bin.cpp  scrollable-widget.cpp  simple-button.cpp  simple-class.cpp  simple-label.cpp  soup.cpp  type-tree.cpp
examples/cmake-project/: CMakeLists.txt  hello.cpp
examples/coro/: async-result.cpp
examples/dbus/: 0pointer-calculator.cpp  avahi.cpp  battery-percentage.cpp  color-scheme.cpp  flatpak-update.cpp  mini-timedatectl.cpp  systemd-units.cpp
examples/expose-to-c/: DemoPerson-c-wrapper.cpp  DemoPerson.cpp  DemoPerson.h  DemoPerson.hpp  main.c
examples/gtkmm-interop/: README.md  main.cpp  meson.build
include/: meson.build
include/peel/: ArrayRef.h  FloatPtr.h  RefPtr.h  String.h  Strv.h  UniquePtr.h  WeakPtr.h  ZArrayRef.h  ZTArrayRef.h  ZTUniquePtr.h  callback.h  class.h  enum.h  lang.h  list.h  property.h  signal.h  widget-template.h
include/peel/GLib/: List.h  MutexLocker.h  Quark.h  RWLockReaderLocker.h  RWLockWriterLocker.h  RecMutexLocker.h  SList.h  Variant.h
include/peel/GObject/: EnumClass.h  FlagsClass.h  Object.h  ObjectConstructParam.h  Type.h  TypeClass.h  TypeInstance.h  TypeInterface.h  Value.h
include/peel/coro/: AsyncResult.h  Future.h  SimpleTask.h
peel_dbus_gen/: argument.py  interface.py  meson.build  method.py  property.py  signal.py  type.py  utils.py
peel_gen/: __init__.py  alias.py  api_tweaks.py  array.py  bitfield.py  boxed.py  c_function_wrapper.py  callback.py  constant.py  constructor.py  cpp_function_wrapper.py  defined_type.py  enumeration.py  exceptions.py  field.py  function.py  function_like.py  interface.py  klass.py  list.py  meson.build  method.py  namespace.py  node_handler.py  parameter.py  parameters.py  property.py  record.py  repository.py  sax_handler.py  signal.py  specializations.py  type.py  type_struct.py  union.py  utils.py  vfunc.py
tests/: Test-1.gir  api-tweaks.txt  meson.build  test.sh
tests/expected/peel/Test/: Rec.h  Test.h  Testy.h  constants.h
