peel_gen_files = files(
  'alias.py',
  'api_tweaks.py',
  'array.py',
  'bitfield.py',
  'boxed.py',
  'callback.py',
  'c_function_wrapper.py',
  'constant.py',
  'constructor.py',
  'cpp_function_wrapper.py',
  'defined_type.py',
  'enumeration.py',
  'exceptions.py',
  'field.py',
  'function_like.py',
  'function.py',
  'interface.py',
  'klass.py',
  'method.py',
  'namespace.py',
  'node_handler.py',
  'parameter.py',
  'parameters.py',
  'property.py',
  'record.py',
  'repository.py',
  'sax_handler.py',
  'signal.py',
  'specializations.py',
  'type.py',
  'type_struct.py',
  'union.py',
  'utils.py',
  'vfunc.py',
)
